Moving to new repo

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,81 +35,20 @@ jobs:
 
       - name: Restore
         run: |
-          dotnet restore src/EG.Common/EG.Common.sln
+          dotnet restore Common.sln
 
       - name: Build
         run: |
-          dotnet build --configuration Release src/EG.Common/EG.Common.sln
+          dotnet build --configuration Release Common.sln
 
       - name: Test
         run: |
-          dotnet test --no-restore --verbosity normal src/EG.Common/EG.Common.sln
+          dotnet test --no-restore --verbosity normal Common.sln
 
-  backend:
-    name: EG.Backend
-    runs-on: ubuntu-latest
-    needs: debug
-    
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setting up Dotnet with ${{ vars.DOTNET_VERSION }} version
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ vars.DOTNET_VERSION }}
-
-      - name: EG Nuget repo
-        run: |
-          dotnet nuget add source --username Andras-Csanyi --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/EncyclopediaGalactica/index.json"
-
-      - name: Restore
-        run: |
-          dotnet restore src/EG.Backend/EG.Backend.sln
-
-      - name: Build
-        run: |
-          dotnet build --configuration Release src/EG.Backend/EG.Backend.sln
-
-      - name: Test
-        run: |
-          dotnet test --no-restore --verbosity normal src/EG.Backend/EG.Backend.sln
-  
-  frontend:
-    name: EG.Frontend
-    runs-on: ubuntu-latest
-    needs: debug
-    
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setting up Dotnet with ${{ vars.DOTNET_VERSION }} version
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ vars.DOTNET_VERSION }}
-
-      - name: EG Nuget repo
-        run: |
-          dotnet nuget add source --username Andras-Csanyi --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/EncyclopediaGalactica/index.json"
-
-      - name: Restore
-        run: |
-          dotnet restore src/EG.FrontEnd/EG.FrontEnd.sln
-
-      - name: Build
-        run: |
-          dotnet build --configuration Release src/EG.FrontEnd/EG.FrontEnd.sln
-
-      - name: Test
-        run: |
-          dotnet test --no-restore --verbosity normal src/EG.FrontEnd/EG.FrontEnd.sln
-          
   semantic_versioning:
     name: Semantic Versioning
     runs-on: ubuntu-latest
     needs:
-      - debug
-      - backend
-      - frontend
       - commons
     environment:
       name: github-pages
@@ -187,4 +126,3 @@ jobs:
         run: |
           dotnet nuget add source --username Andras-Csanyi --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/EncyclopediaGalactica/index.json"
           dotnet nuget push "/home/runner/work/EncyclopediaGalactica/EncyclopediaGalactica/src/EG.Common/BusinessLogic.Contracts/bin/Release/EncyclopediaGalactica.BusinessLogic.Contracts.${{ env.EGVERSION }}.nupkg" --source "github" --api-key ${{ secrets.TOKEN_PUBLISH_NUGET }} --skip-duplicate
-          
