--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,18 +6,6 @@
 version: 2
 updates:
   - package-ecosystem: "nuget"
-    directory: "/src/dotnet/BusinessLogic"
-    schedule: 
-      interval: "daily"
-  - package-ecosystem: "nuget"
-    directory: "/src/dotnet/Infrastructure.Graphql"
-    schedule: 
-      interval: "daily"
-  - package-ecosystem: "nuget"
-    directory: "/src/dotnet/Infrastructure.Graphql.Host"
-    schedule: 
-      interval: "daily"
-  - package-ecosystem: "nuget"
-    directory: "/src/dotnet/Tools"
+    directory: /
     schedule: 
       interval: "daily"
