--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -35,70 +35,12 @@ jobs:
           
       - name: Restore
         run: |
-          dotnet restore src/EG.Common/EG.Common.sln
+          dotnet restore Common.sln
           
       - name: Build
         run: |
-          dotnet build --configuration Debug src/EG.Common/EG.Common.sln
+          dotnet build --configuration Debug Common.sln
           
       - name: Test
         run: |
-          dotnet test --no-restore --verbosity normal src/EG.Common/EG.Common.sln
-
-  backend:
-    name: EG.Backend
-    runs-on: ubuntu-latest
-    needs: debug
-    
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setting up Dotnet with ${{ vars.DOTNET_VERSION }} version
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ vars.DOTNET_VERSION }}
-
-      - name: EG Nuget repo
-        run: |
-          dotnet nuget add source --username Andras-Csanyi --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/EncyclopediaGalactica/index.json"
-
-      - name: Restore
-        run: |
-          dotnet restore src/EG.Backend/EG.Backend.sln
-
-      - name: Build
-        run: |
-          dotnet build --configuration Debug src/EG.Backend/EG.Backend.sln
-
-      - name: Test
-        run: |
-          dotnet test --no-restore --verbosity normal src/EG.Backend/EG.Backend.sln
-          
-  frontend:
-    name: EG.Frontend
-    runs-on: ubuntu-latest
-    needs: debug
-    
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setting up Dotnet with ${{ vars.DOTNET_VERSION }} version
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ vars.DOTNET_VERSION }}
-
-      - name: EG Nuget repo
-        run: |
-          dotnet nuget add source --username Andras-Csanyi --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/EncyclopediaGalactica/index.json"
-
-      - name: Restore
-        run: |
-          dotnet restore src/EG.FrontEnd/EG.FrontEnd.sln
-
-      - name: Build
-        run: |
-          dotnet build --configuration Debug src/EG.FrontEnd/EG.FrontEnd.sln
-
-      - name: Test
-        run: |
-          dotnet test --no-restore --verbosity normal src/EG.FrontEnd/EG.FrontEnd.sln
+          dotnet test --no-restore --verbosity normal Common.sln
