--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -108,21 +108,21 @@ jobs:
 
       - name: Restore
         run: |
-          dotnet restore src/EG.Common/EG.Common.sln
+          dotnet restore Common.sln
 
       - name: Build
         run: |
-          dotnet build --configuration Release --no-restore src/EG.Common/EG.Common.sln
+          dotnet build --configuration Release --no-restore Common.sln
 
       - name: Test
         run: |
-          dotnet test --no-restore --verbosity normal src/EG.Common/EG.Common.sln
+          dotnet test --no-restore --verbosity normal Common.sln
 
       - name: Pack
         run: |
-          dotnet pack --no-restore --verbosity normal --include-symbols --include-source src/EG.Common/BusinessLogic.Contracts/BusinessLogic.Contracts.csproj
+          dotnet pack --no-restore --verbosity normal --include-symbols --include-source BusinessLogic.Contracts/BusinessLogic.Contracts.csproj
 
       - name: Publish
         run: |
           dotnet nuget add source --username Andras-Csanyi --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/EncyclopediaGalactica/index.json"
-          dotnet nuget push "/home/runner/work/EncyclopediaGalactica/EncyclopediaGalactica/src/EG.Common/BusinessLogic.Contracts/bin/Release/EncyclopediaGalactica.BusinessLogic.Contracts.${{ env.EGVERSION }}.nupkg" --source "github" --api-key ${{ secrets.TOKEN_PUBLISH_NUGET }} --skip-duplicate
+          dotnet nuget push "/home/runner/work/EncyclopediaGalactica/Common/BusinessLogic.Contracts/bin/Release/EncyclopediaGalactica.BusinessLogic.Contracts.${{ env.EGVERSION }}.nupkg" --source "github" --api-key ${{ secrets.TOKEN_PUBLISH_NUGET }} --skip-duplicate
