--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,14 +11,6 @@ replace = {new_version}
 search = {current_version}
 replace = {new_version}
 
-[bumpversion:file:src/EG.Common/BusinessLogic.Contracts/BusinessLogic.Contracts.csproj]
-search = {current_version}
-replace = {new_version}
-
-[bumpversion:file:src/EG.Backend/BusinessLogic/BusinessLogic.csproj]
-search = {current_version}
-replace = {new_version}
-
-[bumpversion:file:src/EG.FrontEnd/UIWasm/UIWasm.csproj]
+[bumpversion:file:BusinessLogic.Contracts/BusinessLogic.Contracts.csproj]
 search = {current_version}
 replace = {new_version}
